# vst3-plugins

./: CMakeLists.txt  README.md
common/include/: bypasser.h  circularaudiobuffer.h  dampeddelay.h  damper.h  delay.h  diffuser.h  fdndelay.h  reflection.h  room.h  spring.h
common/source/: bypasser.cpp  circularaudiobuffer.cpp  dampeddelay.cpp  damper.cpp  delay.cpp  diffuser.cpp  fdndelay.cpp  reflection.cpp  room.cpp  spring.cpp
rubendelay/: CMakeLists.txt
rubendelay/include/: plugids.h  plugprocessor.h  version.h
rubendelay/source/: plugcontroller.cpp  plugprocessor.cpp
rubenroom/: CMakeLists.txt
rubenroom/include/: circularaudiobuffer.h  plugids.h  plugprocessor.h  version.h
rubenroom/source/: circularaudiobuffer.cpp  plugcontroller.cpp  plugprocessor.cpp
rubenspring/: CMakeLists.txt
rubenspring/include/: plugcontroller.h  plugids.h  plugprocessor.h  spring.h  version.h
rubenspring/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp  spring.cpp
